test/pointers_test/fail/borrower_not_deletable.cpp
#include "marcpawl/pointers/pointers.hpp"

auto fail()
{
    // Compile time failure expected
     marcpawl::pointers::borrower<int*> borrower(new int(3));
     delete borrower.get();
}
